2009-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkaction.[hc]: Add setters and getters for GtkAction
	properties, in preparation for bug 560228.

2009-01-21  Christian Dywan  <christian@twotoasts.de>

	Bug 567413 – GtkComboBoxEntry doesn't emit "changed" signal
        on entry editing

	* gtk/gtkcombobox.c (gtk_combo_box_set_active): Return only if index
        is set. Patch by Carl-Anton Ingmarsson.

2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* gtk/gtkstyle.c: Add a "Since: 2.16" tag to gtk_style_get.

2009-01-20  Matthias Clasen  <mclasen@redhat.com>

	Bug 565656 – Add marks to scales

	* gtk/gtkrange.[hc]: Add internal api to define 'stop values'
	that have a little resistance when dragging the slider over it.

	* gtk/gtk.symbols:
	* gtk/gtkscale.[hc] (gtk_scale_add_mark): New function to add
	a 'mark' to a scale, which will draws a tick, plus optionally
	some text, and makes the value a stop value.
	(gtk_scale_clear_values): Removes all marks.

	* tests/testscale.c: Test for marks on scales
	* tests/Makefile.am: Integrate it

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c:
	* gtk/gtkfilechooserentry.c:
	* gtk/gtktextview.c: Replace several implementation of
	blank cursor setting by GDK_BLANK_CURSOR.

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkcursor.c:
	* gdk/gdkwindow.c: Update docs on how to create blank cursors.

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	Cache cursors to avoid libXcursor theme lookup overhead.
	Patch by David Alan Gilbert.

	* gdk/gdkcursor.h: Add a GDK_BLANK_CURSOR cursor type.

	* gdk/x11/gdkcursor-x11.c: Cache font cursors and named cursors.

	* gdk/x11/gdkprivate-x11.h:
	* gdk/x11/gdkcdisplay-x11.c: Remove cached cursors when a 
	display if finalized.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 568263 – gtk can't recognize the wrong X Selection TARGETS' 
	type "TARGETS" by java applications
